[metadata]
name = distributions_hlowy
version = 0.1
author = H Lowy
author_github = HLowy
description = Gaussian and Binomial distribution analysis tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hlowy/distributions_package
license_expression = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    math